--- a/Module5/myapp/package.json
+++ b/Module5/myapp/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "supertest": "^7.0.0"
   }
