--- a/Module5/myapp/package.json
+++ b/Module5/myapp/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "swagger-ui-express": "^5.0.0"
   }
 }
